--- a/Rahul/Project/css/style.css
+++ b/Rahul/Project/css/style.css
@@ -3,6 +3,23 @@ body {
     box-sizing: border-box;
 }
 
+/* Common CSS */
+
+.button-default {
+    background: #1F3971 none repeat scroll 0 0;
+    color: #ffffff;
+    display: inline-block;
+    font-size: 14px;
+    margin: 0;
+    padding: 15px 35px;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.button-default:hover {
+    background-color: #f3c30b;
+}
+
 /* Header Section Start */
 
 .header-top {
@@ -216,3 +233,49 @@ body {
 }
 
 /* End of Second Section */
+
+
+/* About Section Start*/
+
+.about-section {
+    margin-top: 95px;
+}
+
+.about-container h1 {
+    font-size: 35px;
+    margin-bottom: 20px;
+    padding-top: 22px;
+    color: #1f3971;
+    font-weight: 700;
+    line-height: 1.2;
+    text-transform: capitalize;
+}
+
+.about-container h1 span {
+    color: #F5B01F;
+}
+
+.about-container p {
+    line-height: 28px;
+    margin-bottom: 12px;
+    margin-right: 45px;
+    font-size: 16px;
+}
+
+.about-container a {
+    padding: 10px 18px;
+    font-weight: 600;
+    margin-top: 21px;
+    border-radius: 50px;
+    font-size: 17px;
+}
+
+.about-container a:hover {
+    background-color: #f3c30b;
+}
+
+.about-image img {
+    height: 428px;
+}
+
+/* End of About Section */
