--- a/yashwebsite/css/style.css
+++ b/yashwebsite/css/style.css
@@ -364,18 +364,37 @@
 
     }
 
+
    
 
 
 
 }
-.menu-buttons  {
+.menu-buttons::after {
+    content: " ";
     position: absolute;
     margin: 20px;
     padding: 10px;
-    font-size: 40px;
+    font-size: 50px;
     display: none;
     color: white;
+    z-index: 5;
+
+    
 
 }
+.menu-buttons{
+    position: absolute;
+    color: white;
+    background-color: #0e0a38;
+    font-size: 50PX;
+}
+.menu-chart::after{
+    width: -50%;
+    height: 100%;
+    color: white;
+    background-color: #0e0a38;
+    background-color:#0e0a38;
+    z-index: ;
 
+}
