--- a/yashwebsite/css/style.css
+++ b/yashwebsite/css/style.css
@@ -1,86 +1,61 @@
 * {
     margin: 0%;
     padding: 0%;
+    box-sizing: border-box;
 }
-
-.section-1 {
+.navigation-bar-1 {
     height: 70px;
     background-color: #0e0a38;
 }
-
-.search-inpur {
+.search-input {
     height: 37px;
     width: 175px;
     background: #27234c;
     border-radius: 8px;
     border: none;
     font-size: 16px;
-
 }
-
 .font-size-nav {
     font-size: 16px;
     color: white;
 }
-
-.section-2 {
+.navigation-bar-2 {
     height: 85px;
 }
-
 .logo-img {
     max-width: 170px;
     height: 50px;
 }
-
 .first-ul>li {
     list-style: none;
 }
-
 .first-ul li a {
     text-decoration: none;
     font-size: 17px;
     font-weight: 700;
     color: black;
 }
-
 .first-ul li a:hover {
     color: #ff783f;
-
 }
-
-.section-3 {
-    background: linear-gradient(rgba(5, 1, 51, 0.7), rgba(5, 1, 51, 0.7), rgba(0, 0, 0, 0)), url("/images/banner-1.jpg");
-    /* background:rgba(0,0,0,6) url("/images/banner-1.jpg"); */
+.section-intro-img {
+    background: linear-gradient(rgba(5, 1, 51, 0.7), rgba(5, 1, 51, 0.7), rgba(0, 0, 0, 0)), url("/yash.github.io/images/banner-1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
     height: 100%;
-
+    color: white;
     background-color: black;
     position: relative;
 }
-
-/* .section-3::after{
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(103, 98, 150, 0.7);
-
-   
-} */
 .caption-text-1 {
     font-size: 20px;
     inline-size: 30px;
     color: orange;
 }
-
 .caption-text {
     color: white;
 }
-
 .btn-courses {
     background-color: #ff630e;
     color: white;
@@ -88,14 +63,11 @@
     text-align: center;
     height: 52px;
     width: 167px;
-
 }
-
 .btn-courses:hover {
     background-color: white;
     color: #ff630e;
 }
-
 .btn-triel {
     background-color: white;
     color: #ff630e;
@@ -103,42 +75,31 @@
     text-align: center;
     height: 52px;
     width: 167px;
-
 }
-
 .btn-triel:hover {
     background-color: #ff630e;
     color: white;
-
 }
-
-.section-4-text-1 {
+.popular-categories-text-1 {
     font-size: 15px;
-
     line-height: 26px;
     font-weight: 600;
     text-transform: uppercase;
     color: #FF630E;
-    letter-spacing: 1px;
+   letter-spacing: 1px;
 }
-
-.section-4-text-2 {
-    font-size: 40px;
-    font-weight: 600;
+.popular-categories-text-2 {
+    font-size: 33px;
+    font-weight: 500;
     color: #130f40;
 }
-
 .card-text {
     font-size: 17px;
-    font-weight: 400;
+   font-weight: 400;
 }
-
 .card-images {
-    /* height: 100px;
-    width: 150px; */
     border-radius: 15px;
 }
-
 .btn-all-categories:hover {
     background-color: #130f40;
     color: white;
@@ -146,7 +107,6 @@
     width: 167px;
     font-size: 15px;
 }
-
 .btn-all-categories {
     background-color: #ff630e;
     color: white;
@@ -155,31 +115,23 @@
     border-radius: 3px;
     height: 52px;
     width: 167px;
-    transition: 1S;
 }
-
 .card-text-2 {
     font-weight: 500;
     font-size: 25px;
     text-align: left;
 }
-
 .card-text-2:hover {
-
-    color: #FF630E;
+   color: #FF630E;
 }
-
 .card-text-2-num {
     color: #FF630E;
     font-size: 20px;
 }
-
 .section-5 {
     background-color: #f7f7f7;
 }
-
-/* section-6 needed css  */
-.section-6::before {
+.discount-section::before {
     content: '';
     background-color: #130f40;
     height: 500px;
@@ -187,11 +139,9 @@
     position: absolute;
     margin-top: 120px;
 }
-
 .img-text-container {
     position: relative;
 }
-
 .girl-1 {
     height: 600px;
     width: 530px;
@@ -199,11 +149,9 @@
     border-radius: 12px 0px 12px 12px;
     background: white;
 }
-
 .text-container-offer {
     float: left;
 }
-
 .img-text-container-2 {
     color: white;
     height: 600px;
@@ -212,7 +160,6 @@
     background: #130f40;
     border-radius: 0px 12px 12px 12px;
 }
-
 .img-text-container-2 h4 {
     color: #FF630E;
     font-size: 16px;
@@ -222,7 +169,6 @@
     letter-spacing: 1px;
     margin-bottom: 20px;
 }
-
 .img-text-container-2 h2 {
     font-size: 45px;
     line-height: 50px;
@@ -232,41 +178,28 @@
 }
 
 .img-text-container-2 p {
-
     font-family: 'Rubik', sans-serif;
     font-size: 16px;
     line-height: 26px;
 }
-
 .quolans {
     color: #FF630E;
 }
-
-* {
-    margin: 0%;
-    padding: 0%;
-}
-
 .clients {
     height: 70px;
     width: 70px;
     border-radius: 40px
 }
-
 .email-subcription-bar {
     height: 160px;
     width: 1250px;
     background-color: #130f40;
     border-radius: 40px;
 }
-
 .input-email-1 {
     height: 52px;
     border: 0px;
-
-
 }
-
 .form-button input {
     height: 50px;
     padding: 12px 12px;
@@ -278,7 +211,6 @@
     box-sizing: border-box;
     border-radius: 10px 0px 0px 10px;
 }
-
 .form-button button {
     border: 0px;
     margin: 0px;
@@ -288,7 +220,6 @@
     padding: 12px;
     font-weight: 500;
     color: white;
-
 }
 
 .svg-image-logo {
