--- a/project-2/css/style.css
+++ b/project-2/css/style.css
@@ -33,8 +33,92 @@
     color: rgb(11, 110, 190);
     margin: 10px;
 }
+.home_btn
+{
+    padding: 30px;
+}
 .page2
 {
     padding-top: 50px;
     padding-bottom: 50px;
+}
+.manage h3
+{
+    font-size: 45px;
+    line-height: 50px;
+}
+.manage h3 p a {
+    padding: 30px 0;
+}
+.manage{
+    padding-top: 160px;
+}
+.download
+{
+    display: inline-block;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: lightgrey;
+    text-align: center;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-size: 20px;
+    color: black;
+}
+.download:hover {
+    background-color: rgb(236, 110, 110);
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    color: white;
+  }
+  .mockup 
+  {
+    text-align: center;
+    display: inline-block;
+  }
+  .page3-img img
+  {
+    padding: 0 30px;
+  }
+  .pagetitle
+  {
+    text-align: center;
+  }
+  .pagetitle h2{
+    font-weight: 40px;
+    font-size: 30px;
+    letter-spacing: 2px;
+}
+.dottedline
+{
+    border-bottom: 2px dashed;
+    width: 60px;
+    position: relative;
+    display: block;
+    margin: auto;
+}
+.page4
+{
+    background-color: rgb(245, 237, 237);
+    box-shadow: 0 2px 3px rgb(180, 173, 173);
+    text-align: center;
+    padding: 40px 50px;
+    margin-bottom: 20px;
+}
+.page4 i{
+    border-radius: 50%;
+    border: 1px solid rgb(221, 211, 211);
+    height: 90px;
+    width: 90px;
+    line-height: 90px;
+    display: inline-block;
+    text-align: center;
+}
+.page4 i:hover
+{
+    background: rgb(236, 110, 110);
+    color: white;
+}
+.work1
+{
+    padding: 50px;
 }
