--- a/css/style.css
+++ b/css/style.css
@@ -4,60 +4,75 @@
     color: black;
     font-weight: bold;
 }
+
 .navbar-nav a:hover {
     color: #06BBCC;
 }
 
-.col-4 i, h6 {
+.col-4 i,
+h6 {
     font-size: 38px;
     color: #06BBCC;
 }
-.carousel-caption h5,h1,p {
+
+.carousel-caption h5,
+h1,
+p {
     text-align: start;
     padding-bottom: 18px;
     margin: 0px;
 }
-.carousel-caption h1{
+
+.carousel-caption h1 {
     width: 564px;
     font-size: 60px;
     color: white;
 }
-.carousel-caption p{
+
+.carousel-caption p {
     color: #000000;
     font-weight: 500;
     font-size: 22px;
     width: 790px;
 }
-.services-card .card{
-   background-color: #f0fbfc;
+
+.services-card .card {
+    background-color: #f0fbfc;
 }
-.services-card .card:hover{
+
+.services-card .card:hover {
     background-color: rgb(208, 218, 125);
 }
+
 .about img {
     width: 500px;
 }
-.img1{
+
+.img1 {
     width: 746px;
 }
-.img2{
+
+.img2 {
     width: 365px;
 }
-.img3{
+
+.img3 {
     width: 365px;
 }
-.img4{
+
+.img4 {
     width: 370px;
     height: 540px;
 }
-.bottom{
-    background-color: #181d38 ;
+
+.bottom {
+    background-color: #181d38;
 }
 
 .footer ol li a {
     text-decoration: none;
 }
-.footer ol li{
+
+.footer ol li {
     list-style: none;
 }
-
