--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ div {
     font-weight: 400;
     margin-bottom: 14px;
     color: #fde02f;
-    font-family: Satisfy;
+    font-style: italic;
     line-height: 1,3;
     margin-bottom: 17px;
 }
@@ -72,16 +72,16 @@ div {
 .text{
     width: 34%;
 }
-.col-xl-12{
-    display: inline-flex;
-    /* margin-top: 36px;
-    width: 200%;
-    padding-right: 200px; */
-    /* position: relative;
-    width: 100%;
-    min-height: 14px;
-    padding-right: 15px;
-    padding-left: 15px; */
+.form.search-box {
+    padding: 25px 40px 0 40px;
+    background: rgba(255,255,255,0.2);
+    border-radius: 6px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.search-box{
+    display: inline-block;
 }
 
 
@@ -102,13 +102,12 @@ div {
     text-align: center; */
 
 }
- .h5:hover {
-      color: #212529;
-}
+ 
 /* section3 */
 .section-title span{
     color: orange;
 }
+
 .card-body{
     padding: 28px 40px;
     border: 1px solid #f0f1f2;
@@ -138,6 +137,9 @@ div {
 }
 .caption{
     display: inline-block;
+}
+.favourite-place{
+    margin: 70px;
 }
 /* section4 */
 .back{
