--- a/css/responcive.css
+++ b/css/responcive.css
@@ -28,7 +28,7 @@
         margin-top: 20px;
     }
 }
-/* @media (min-width: 576px) { 
-    width: 100%;
-} */
+ /* @media (min-width: 576px) { 
+    width: 100%; */
+
 
